# Herm

./: .gitIgnore  .gitignore  .gitmodules  README.md  dashboard.html  main  main.cpp  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: build-firmware.yml
.playwright-cli/: page-2026-03-07T04-15-37-953Z.yml  page-2026-03-07T04-15-43-772Z.yml
app/: globals.css  layout.tsx
app/(marketing)/: page.tsx
components/: setup-required.tsx
components/auth/: login-form.tsx
components/dashboard/: app-shell.tsx  device-setup-studio.tsx  sign-out-button.tsx
components/marketing/: unicorn-hero-scene.tsx
components/ui/: background-lines.tsx
firmware/: config
gps-dashboard/: CMakeLists.txt  README.md  camera_service.py  dashboard.html  firstboot.sh  hardware.js  herm-diag.sh  herm-firstboot.service  herm-runtime.service  modules.js  package.json  plate_watch.cpp  requirements.txt  server.js  settings.js  setup-plate-watch.sh  setup.sh  sim7600.js
lib/: device-auth.ts  device-secrets.ts  device-setup.ts  env.ts  marketing-data.ts  pi-discovery.ts  portal-health.ts  portal-types.ts  validators.ts
lib/supabase/: admin.ts  server.ts
supabase/migrations/: 202603070001_herm_portal.sql
tests/: smoke.spec.ts
web/: .env.example  README.md  TESTING_CHECKLIST.md  next.config.mjs  package.json  playwright.config.ts  proxy.ts
web/app/: globals.css  layout.tsx
web/components/: herm-logo.tsx
web/lib/: app-origin.ts  auth.ts  dashboard-data.ts  device-live.ts  device-setup.ts  devices.ts  email.ts  env.ts  format.ts  (+5 more)
(+60 files in other folders)
